@@ -32,7 +32,8 @@ TOWNS:
 - Soul Prison
 
 OBJECTS:
-
+New object supported:
+- War Machine Factory
 
 0.75 -> 0.8 (Mar 01 2010)
 GENERAL:
